# activity_tracker

./: README.md  pyproject.toml
_project/_project/: settings.py  urls.py
_project/app/: models.py  urls.py  views.py
_project/app/migrations/: 0001_initial.py
_project/app/static/app/: style.css
_project/app/templates/app/: activity.html  index.html  new_activity.html  new_timelog.html  passwords.html
